# feature_2_xiaogui_assistant

./: .gitignore  .gitlab-ci.yml  README-STARTUP.md  README.md  install-deps.sh  requirements.txt  shutdown.sh  startup.sh
app/: config.py  main.py
app/api/: __init__.py  extractions.py  tasks.py
app/models/: __init__.py  database.py  schemas.py
app/services/: content_processor.py  file_service.py  (+6 more)
backend/: .dockerignore  Dockerfile  ENVIRONMENT_SETUP.md  README.md  pyproject.toml  shutdown.sh  startup.sh
backend/app/: auth.py  config.py  main.py
backend/app/api/: __init__.py  api.py  batch_api.py  common_api.py  single_file_api.py
backend/app/consumers/: __init__.py  field_extraction_consumer.py  field_extraction_processor.py  file_classification_consumer.py  file_classification_processor.py  simple_field_extraction_consumer.py  simple_file_classification_consumer.py
backend/app/models/: database.py  prompt_schemas.py  schemas.py
backend/app/proto/: common_pb2.py  file_types.py
backend/app/services/: __init__.py  callback_service.py  content_processor.py  field_extraction_consumer.py  file_service.py  gemini_service.py  kafka_consumer.py  kafka_service.py  llm_service.py  minio_service.py  processing_message_updater.py  qwen_service.py  simple_file_service.py
backend/config/: instructions.yaml
backend/proto/: common.proto
backend/utils/: clean_restart_topic.sh
deploy/: DEPLOYMENT_GUIDE.md  README-DOCKER-CONFIG.md  README.md  build-and-deploy.sh  docker-compose.aliyun.yml  docker.env  env.template  setup_server.sh  start.sh  startup.sh
design/: docker-architecture.md
frontend/: Dockerfile  README-CONFIG.md  README.md  env.template  eslint.config.js  nginx.conf  package-lock.json  package.json  startup.sh
utils/: clear_all_tables.sh  e2e_test.sh
(+32 files in other folders)
